[package]
name = "decon-macro-impl"
version = "0.1.0"
authors = ["Shiwei Zhang <ylxdzsw@gmail.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
uuid = { version = "0.8", features = ["v4"] }
